// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Group renders attached with round shape 1`] = `
@keyframes animation-0 {
  0% {
    -webkit-transform: rotateZ(0deg);
    -moz-transform: rotateZ(0deg);
    -ms-transform: rotateZ(0deg);
    transform: rotateZ(0deg);
  }

  100% {
    -webkit-transform: rotateZ(360deg);
    -moz-transform: rotateZ(360deg);
    -ms-transform: rotateZ(360deg);
    transform: rotateZ(360deg);
  }
}

.emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: 0px;
}

.emotion-2:hover {
  z-index: 2;
}

.emotion-3 {
  -webkit-transition: all 200ms ease-in-out;
  transition: all 200ms ease-in-out;
  vertical-align: middle;
  white-space: nowrap;
  outline: none;
  border: 0;
  background-color: transparent;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  padding: 2px 12px;
  border-top-left-radius: 999px;
  border-bottom-left-radius: 999px;
  color: #fff;
  background-color: #134ae0;
}

.emotion-3:hover {
  color: #fff;
}

.emotion-3:active {
  -webkit-transition: none;
  transition: none;
  color: #fff;
}

.emotion-3:disabled {
  color: #fff;
}

.emotion-3:hover {
  background-color: #175ceb;
}

.emotion-3:active {
  -webkit-transition: none;
  transition: none;
  background-color: #083bc7;
}

.emotion-3:disabled {
  background-color: #99beff;
}

.emotion-5 {
  font-size: 12px;
  font-weight: normal;
  font-stretch: normal;
  font-style: normal;
  line-height: 20px;
  letter-spacing: normal;
}

.emotion-6 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: -1px;
}

.emotion-6:hover {
  z-index: 2;
}

.emotion-7 {
  -webkit-transition: all 200ms ease-in-out;
  transition: all 200ms ease-in-out;
  vertical-align: middle;
  white-space: nowrap;
  outline: none;
  border: 0;
  background-color: transparent;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  padding: 2px 12px;
  border-radius: 0;
  color: #fff;
  background-color: #134ae0;
}

.emotion-7:hover {
  color: #fff;
}

.emotion-7:active {
  -webkit-transition: none;
  transition: none;
  color: #fff;
}

.emotion-7:disabled {
  color: #fff;
}

.emotion-7:hover {
  background-color: #175ceb;
}

.emotion-7:active {
  -webkit-transition: none;
  transition: none;
  background-color: #083bc7;
}

.emotion-7:disabled {
  background-color: #99beff;
}

.emotion-9 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 12px;
  height: 12px;
  font-size: 12px;
  margin-right: 6px;
}

.emotion-16 {
  -webkit-transition: all 200ms ease-in-out;
  transition: all 200ms ease-in-out;
  vertical-align: middle;
  white-space: nowrap;
  outline: none;
  border: 0;
  background-color: transparent;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  padding: 1px 11px;
  border-radius: 0;
  color: #134ae0;
  border: solid 1px #134ae0;
}

.emotion-16:hover {
  color: #175ceb;
}

.emotion-16:active {
  -webkit-transition: none;
  transition: none;
  color: #083bc7;
}

.emotion-16:disabled {
  color: #99beff;
}

.emotion-16:hover {
  border: solid 1px #175ceb;
}

.emotion-16:active {
  -webkit-transition: none;
  transition: none;
  border: solid 1px #083bc7;
}

.emotion-16:disabled {
  border: solid 1px #99beff;
}

.emotion-21 {
  -webkit-transition: all 200ms ease-in-out;
  transition: all 200ms ease-in-out;
  vertical-align: middle;
  white-space: nowrap;
  outline: none;
  border: 0;
  background-color: transparent;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: default;
  padding: 2px 12px;
  border-radius: 0;
  color: #fff;
  background-color: #134ae0;
}

.emotion-21:hover {
  color: #fff;
}

.emotion-21:active {
  -webkit-transition: none;
  transition: none;
  color: #fff;
}

.emotion-21:disabled {
  color: #fff;
}

.emotion-21:hover {
  background-color: #175ceb;
}

.emotion-21:active {
  -webkit-transition: none;
  transition: none;
  background-color: #083bc7;
}

.emotion-21:disabled {
  background-color: #99beff;
}

.emotion-24 {
  -webkit-animation: 1s linear infinite animation-0;
  animation: 1s linear infinite animation-0;
  vertical-align: middle;
}

.emotion-33 {
  -webkit-transition: all 200ms ease-in-out;
  transition: all 200ms ease-in-out;
  vertical-align: middle;
  white-space: nowrap;
  outline: none;
  border: 0;
  background-color: transparent;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: default;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 24px;
  height: 24px;
  font-size: 12px;
  border-radius: 0;
  color: #fff;
  background-color: #134ae0;
}

.emotion-33:hover {
  color: #fff;
}

.emotion-33:active {
  -webkit-transition: none;
  transition: none;
  color: #fff;
}

.emotion-33:disabled {
  color: #fff;
}

.emotion-33:hover {
  background-color: #175ceb;
}

.emotion-33:active {
  -webkit-transition: none;
  transition: none;
  background-color: #083bc7;
}

.emotion-33:disabled {
  background-color: #99beff;
}

.emotion-35 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 12px;
  height: 12px;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-38 {
  -webkit-transition: all 200ms ease-in-out;
  transition: all 200ms ease-in-out;
  vertical-align: middle;
  white-space: nowrap;
  outline: none;
  border: 0;
  background-color: transparent;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  padding: 2px 12px;
  border-top-right-radius: 999px;
  border-bottom-right-radius: 999px;
  color: #fff;
  background-color: #134ae0;
}

.emotion-38:hover {
  color: #fff;
}

.emotion-38:active {
  -webkit-transition: none;
  transition: none;
  color: #fff;
}

.emotion-38:disabled {
  color: #fff;
}

.emotion-38:hover {
  background-color: #175ceb;
}

.emotion-38:active {
  -webkit-transition: none;
  transition: none;
  background-color: #083bc7;
}

.emotion-38:disabled {
  background-color: #99beff;
}

<div
  class="emotion-0 emotion-0"
  data-testid="test-button-group"
>
  <span
    class="emotion-2"
  >
    <button
      class="emotion-3 emotion-3"
    >
      <span
        class="emotion-5"
      >
        Hello
      </span>
    </button>
  </span>
  <span
    class="emotion-6"
  >
    <button
      class="emotion-7 emotion-7"
    >
      <span
        class="emotion-9"
      >
        <svg
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 16 16"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951z"
          />
        </svg>
      </span>
      <span
        class="emotion-5"
      >
        Hello
      </span>
    </button>
  </span>
  <span
    class="emotion-6"
  >
    <button
      class="emotion-7 emotion-7"
    >
      <span
        class="emotion-5"
      >
        Hello
      </span>
    </button>
  </span>
  <span
    class="emotion-6"
  >
    <button
      class="emotion-16 emotion-16"
    >
      <span
        class="emotion-9"
      >
        <svg
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 16 16"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951z"
          />
        </svg>
      </span>
      <span
        class="emotion-5"
      >
        Hello
      </span>
    </button>
  </span>
  <span
    class="emotion-6"
  >
    <button
      class="emotion-21 emotion-21"
      disabled=""
    >
      <span
        class="emotion-9"
      >
        <svg
          class="emotion-24"
          color="currentColor"
          height="1em"
          viewBox="0 0 12 12"
          width="1em"
        >
          <title>
            LoadingIcon
          </title>
          <path
            d="M5.25.75A.75.75 0 0 1 6 0a6 6 0 1 1-6 6 .75.75 0 0 1 1.5 0A4.5 4.5 0 1 0 6 1.5a.75.75 0 0 1-.75-.75z"
            fill="currentColor"
          />
        </svg>
      </span>
      <span
        class="emotion-5"
      >
        Hello
      </span>
    </button>
  </span>
  <span
    class="emotion-6"
  >
    <button
      class="emotion-21 emotion-21"
      disabled=""
    >
      <span
        class="emotion-9"
      >
        <svg
          class="emotion-24"
          color="currentColor"
          height="1em"
          viewBox="0 0 12 12"
          width="1em"
        >
          <title>
            LoadingIcon
          </title>
          <path
            d="M5.25.75A.75.75 0 0 1 6 0a6 6 0 1 1-6 6 .75.75 0 0 1 1.5 0A4.5 4.5 0 1 0 6 1.5a.75.75 0 0 1-.75-.75z"
            fill="currentColor"
          />
        </svg>
      </span>
      <span
        class="emotion-5"
      >
        Loading
      </span>
    </button>
  </span>
  <span
    class="emotion-6"
  >
    <button
      class="emotion-33 emotion-33"
      disabled=""
    >
      <span
        class="emotion-35"
      >
        <svg
          class="emotion-24"
          color="currentColor"
          height="1em"
          viewBox="0 0 12 12"
          width="1em"
        >
          <title>
            LoadingIcon
          </title>
          <path
            d="M5.25.75A.75.75 0 0 1 6 0a6 6 0 1 1-6 6 .75.75 0 0 1 1.5 0A4.5 4.5 0 1 0 6 1.5a.75.75 0 0 1-.75-.75z"
            fill="currentColor"
          />
        </svg>
      </span>
    </button>
  </span>
  <span
    class="emotion-6"
  >
    <button
      class="emotion-38 emotion-38"
      disabled=""
    >
      <span
        class="emotion-5"
      >
        Text
      </span>
    </button>
  </span>
</div>
`;

exports[`Button Group renders attached with square shape 1`] = `
@keyframes animation-0 {
  0% {
    -webkit-transform: rotateZ(0deg);
    -moz-transform: rotateZ(0deg);
    -ms-transform: rotateZ(0deg);
    transform: rotateZ(0deg);
  }

  100% {
    -webkit-transform: rotateZ(360deg);
    -moz-transform: rotateZ(360deg);
    -ms-transform: rotateZ(360deg);
    transform: rotateZ(360deg);
  }
}

.emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: 0px;
}

.emotion-2:hover {
  z-index: 2;
}

.emotion-3 {
  -webkit-transition: all 200ms ease-in-out;
  transition: all 200ms ease-in-out;
  vertical-align: middle;
  white-space: nowrap;
  outline: none;
  border: 0;
  background-color: transparent;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  padding: 2px 12px;
  border-top-left-radius: 4px;
  border-bottom-left-radius: 4px;
  color: #fff;
  background-color: #134ae0;
}

.emotion-3:hover {
  color: #fff;
}

.emotion-3:active {
  -webkit-transition: none;
  transition: none;
  color: #fff;
}

.emotion-3:disabled {
  color: #fff;
}

.emotion-3:hover {
  background-color: #175ceb;
}

.emotion-3:active {
  -webkit-transition: none;
  transition: none;
  background-color: #083bc7;
}

.emotion-3:disabled {
  background-color: #99beff;
}

.emotion-5 {
  font-size: 12px;
  font-weight: normal;
  font-stretch: normal;
  font-style: normal;
  line-height: 20px;
  letter-spacing: normal;
}

.emotion-6 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: -1px;
}

.emotion-6:hover {
  z-index: 2;
}

.emotion-7 {
  -webkit-transition: all 200ms ease-in-out;
  transition: all 200ms ease-in-out;
  vertical-align: middle;
  white-space: nowrap;
  outline: none;
  border: 0;
  background-color: transparent;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  padding: 2px 12px;
  border-radius: 0;
  color: #fff;
  background-color: #134ae0;
}

.emotion-7:hover {
  color: #fff;
}

.emotion-7:active {
  -webkit-transition: none;
  transition: none;
  color: #fff;
}

.emotion-7:disabled {
  color: #fff;
}

.emotion-7:hover {
  background-color: #175ceb;
}

.emotion-7:active {
  -webkit-transition: none;
  transition: none;
  background-color: #083bc7;
}

.emotion-7:disabled {
  background-color: #99beff;
}

.emotion-9 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 12px;
  height: 12px;
  font-size: 12px;
  margin-right: 6px;
}

.emotion-16 {
  -webkit-transition: all 200ms ease-in-out;
  transition: all 200ms ease-in-out;
  vertical-align: middle;
  white-space: nowrap;
  outline: none;
  border: 0;
  background-color: transparent;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  padding: 1px 11px;
  border-radius: 0;
  color: #134ae0;
  border: solid 1px #134ae0;
}

.emotion-16:hover {
  color: #175ceb;
}

.emotion-16:active {
  -webkit-transition: none;
  transition: none;
  color: #083bc7;
}

.emotion-16:disabled {
  color: #99beff;
}

.emotion-16:hover {
  border: solid 1px #175ceb;
}

.emotion-16:active {
  -webkit-transition: none;
  transition: none;
  border: solid 1px #083bc7;
}

.emotion-16:disabled {
  border: solid 1px #99beff;
}

.emotion-21 {
  -webkit-transition: all 200ms ease-in-out;
  transition: all 200ms ease-in-out;
  vertical-align: middle;
  white-space: nowrap;
  outline: none;
  border: 0;
  background-color: transparent;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: default;
  padding: 2px 12px;
  border-radius: 0;
  color: #fff;
  background-color: #134ae0;
}

.emotion-21:hover {
  color: #fff;
}

.emotion-21:active {
  -webkit-transition: none;
  transition: none;
  color: #fff;
}

.emotion-21:disabled {
  color: #fff;
}

.emotion-21:hover {
  background-color: #175ceb;
}

.emotion-21:active {
  -webkit-transition: none;
  transition: none;
  background-color: #083bc7;
}

.emotion-21:disabled {
  background-color: #99beff;
}

.emotion-24 {
  -webkit-animation: 1s linear infinite animation-0;
  animation: 1s linear infinite animation-0;
  vertical-align: middle;
}

.emotion-33 {
  -webkit-transition: all 200ms ease-in-out;
  transition: all 200ms ease-in-out;
  vertical-align: middle;
  white-space: nowrap;
  outline: none;
  border: 0;
  background-color: transparent;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: default;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 24px;
  height: 24px;
  font-size: 12px;
  border-radius: 0;
  color: #fff;
  background-color: #134ae0;
}

.emotion-33:hover {
  color: #fff;
}

.emotion-33:active {
  -webkit-transition: none;
  transition: none;
  color: #fff;
}

.emotion-33:disabled {
  color: #fff;
}

.emotion-33:hover {
  background-color: #175ceb;
}

.emotion-33:active {
  -webkit-transition: none;
  transition: none;
  background-color: #083bc7;
}

.emotion-33:disabled {
  background-color: #99beff;
}

.emotion-35 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 12px;
  height: 12px;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-38 {
  -webkit-transition: all 200ms ease-in-out;
  transition: all 200ms ease-in-out;
  vertical-align: middle;
  white-space: nowrap;
  outline: none;
  border: 0;
  background-color: transparent;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  padding: 2px 12px;
  border-top-right-radius: 4px;
  border-bottom-right-radius: 4px;
  color: #fff;
  background-color: #134ae0;
}

.emotion-38:hover {
  color: #fff;
}

.emotion-38:active {
  -webkit-transition: none;
  transition: none;
  color: #fff;
}

.emotion-38:disabled {
  color: #fff;
}

.emotion-38:hover {
  background-color: #175ceb;
}

.emotion-38:active {
  -webkit-transition: none;
  transition: none;
  background-color: #083bc7;
}

.emotion-38:disabled {
  background-color: #99beff;
}

<div
  class="emotion-0 emotion-0"
  data-testid="test-button-group"
>
  <span
    class="emotion-2"
  >
    <button
      class="emotion-3 emotion-3"
    >
      <span
        class="emotion-5"
      >
        Hello
      </span>
    </button>
  </span>
  <span
    class="emotion-6"
  >
    <button
      class="emotion-7 emotion-7"
    >
      <span
        class="emotion-9"
      >
        <svg
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 16 16"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951z"
          />
        </svg>
      </span>
      <span
        class="emotion-5"
      >
        Hello
      </span>
    </button>
  </span>
  <span
    class="emotion-6"
  >
    <button
      class="emotion-7 emotion-7"
    >
      <span
        class="emotion-5"
      >
        Hello
      </span>
    </button>
  </span>
  <span
    class="emotion-6"
  >
    <button
      class="emotion-16 emotion-16"
    >
      <span
        class="emotion-9"
      >
        <svg
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 16 16"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951z"
          />
        </svg>
      </span>
      <span
        class="emotion-5"
      >
        Hello
      </span>
    </button>
  </span>
  <span
    class="emotion-6"
  >
    <button
      class="emotion-21 emotion-21"
      disabled=""
    >
      <span
        class="emotion-9"
      >
        <svg
          class="emotion-24"
          color="currentColor"
          height="1em"
          viewBox="0 0 12 12"
          width="1em"
        >
          <title>
            LoadingIcon
          </title>
          <path
            d="M5.25.75A.75.75 0 0 1 6 0a6 6 0 1 1-6 6 .75.75 0 0 1 1.5 0A4.5 4.5 0 1 0 6 1.5a.75.75 0 0 1-.75-.75z"
            fill="currentColor"
          />
        </svg>
      </span>
      <span
        class="emotion-5"
      >
        Hello
      </span>
    </button>
  </span>
  <span
    class="emotion-6"
  >
    <button
      class="emotion-21 emotion-21"
      disabled=""
    >
      <span
        class="emotion-9"
      >
        <svg
          class="emotion-24"
          color="currentColor"
          height="1em"
          viewBox="0 0 12 12"
          width="1em"
        >
          <title>
            LoadingIcon
          </title>
          <path
            d="M5.25.75A.75.75 0 0 1 6 0a6 6 0 1 1-6 6 .75.75 0 0 1 1.5 0A4.5 4.5 0 1 0 6 1.5a.75.75 0 0 1-.75-.75z"
            fill="currentColor"
          />
        </svg>
      </span>
      <span
        class="emotion-5"
      >
        Loading
      </span>
    </button>
  </span>
  <span
    class="emotion-6"
  >
    <button
      class="emotion-33 emotion-33"
      disabled=""
    >
      <span
        class="emotion-35"
      >
        <svg
          class="emotion-24"
          color="currentColor"
          height="1em"
          viewBox="0 0 12 12"
          width="1em"
        >
          <title>
            LoadingIcon
          </title>
          <path
            d="M5.25.75A.75.75 0 0 1 6 0a6 6 0 1 1-6 6 .75.75 0 0 1 1.5 0A4.5 4.5 0 1 0 6 1.5a.75.75 0 0 1-.75-.75z"
            fill="currentColor"
          />
        </svg>
      </span>
    </button>
  </span>
  <span
    class="emotion-6"
  >
    <button
      class="emotion-38 emotion-38"
      disabled=""
    >
      <span
        class="emotion-5"
      >
        Text
      </span>
    </button>
  </span>
</div>
`;

exports[`Button Group renders with spacing 1`] = `
@keyframes animation-0 {
  0% {
    -webkit-transform: rotateZ(0deg);
    -moz-transform: rotateZ(0deg);
    -ms-transform: rotateZ(0deg);
    transform: rotateZ(0deg);
  }

  100% {
    -webkit-transform: rotateZ(360deg);
    -moz-transform: rotateZ(360deg);
    -ms-transform: rotateZ(360deg);
    transform: rotateZ(360deg);
  }
}

.emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: 0px;
}

.emotion-2:hover {
  z-index: 2;
}

.emotion-3 {
  -webkit-transition: all 200ms ease-in-out;
  transition: all 200ms ease-in-out;
  vertical-align: middle;
  white-space: nowrap;
  outline: none;
  border: 0;
  background-color: transparent;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  padding: 2px 12px;
  border-radius: 4px;
  color: #fff;
  background-color: #134ae0;
}

.emotion-3:hover {
  color: #fff;
}

.emotion-3:active {
  -webkit-transition: none;
  transition: none;
  color: #fff;
}

.emotion-3:disabled {
  color: #fff;
}

.emotion-3:hover {
  background-color: #175ceb;
}

.emotion-3:active {
  -webkit-transition: none;
  transition: none;
  background-color: #083bc7;
}

.emotion-3:disabled {
  background-color: #99beff;
}

.emotion-5 {
  font-size: 12px;
  font-weight: normal;
  font-stretch: normal;
  font-style: normal;
  line-height: 20px;
  letter-spacing: normal;
}

.emotion-6 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: 12px;
}

.emotion-6:hover {
  z-index: 2;
}

.emotion-9 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 12px;
  height: 12px;
  font-size: 12px;
  margin-right: 6px;
}

.emotion-16 {
  -webkit-transition: all 200ms ease-in-out;
  transition: all 200ms ease-in-out;
  vertical-align: middle;
  white-space: nowrap;
  outline: none;
  border: 0;
  background-color: transparent;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  padding: 1px 11px;
  border-radius: 4px;
  color: #134ae0;
  border: solid 1px #134ae0;
}

.emotion-16:hover {
  color: #175ceb;
}

.emotion-16:active {
  -webkit-transition: none;
  transition: none;
  color: #083bc7;
}

.emotion-16:disabled {
  color: #99beff;
}

.emotion-16:hover {
  border: solid 1px #175ceb;
}

.emotion-16:active {
  -webkit-transition: none;
  transition: none;
  border: solid 1px #083bc7;
}

.emotion-16:disabled {
  border: solid 1px #99beff;
}

.emotion-21 {
  -webkit-transition: all 200ms ease-in-out;
  transition: all 200ms ease-in-out;
  vertical-align: middle;
  white-space: nowrap;
  outline: none;
  border: 0;
  background-color: transparent;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: default;
  padding: 2px 12px;
  border-radius: 4px;
  color: #fff;
  background-color: #134ae0;
}

.emotion-21:hover {
  color: #fff;
}

.emotion-21:active {
  -webkit-transition: none;
  transition: none;
  color: #fff;
}

.emotion-21:disabled {
  color: #fff;
}

.emotion-21:hover {
  background-color: #175ceb;
}

.emotion-21:active {
  -webkit-transition: none;
  transition: none;
  background-color: #083bc7;
}

.emotion-21:disabled {
  background-color: #99beff;
}

.emotion-24 {
  -webkit-animation: 1s linear infinite animation-0;
  animation: 1s linear infinite animation-0;
  vertical-align: middle;
}

.emotion-33 {
  -webkit-transition: all 200ms ease-in-out;
  transition: all 200ms ease-in-out;
  vertical-align: middle;
  white-space: nowrap;
  outline: none;
  border: 0;
  background-color: transparent;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: default;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 24px;
  height: 24px;
  font-size: 12px;
  border-radius: 4px;
  color: #fff;
  background-color: #134ae0;
}

.emotion-33:hover {
  color: #fff;
}

.emotion-33:active {
  -webkit-transition: none;
  transition: none;
  color: #fff;
}

.emotion-33:disabled {
  color: #fff;
}

.emotion-33:hover {
  background-color: #175ceb;
}

.emotion-33:active {
  -webkit-transition: none;
  transition: none;
  background-color: #083bc7;
}

.emotion-33:disabled {
  background-color: #99beff;
}

.emotion-35 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 12px;
  height: 12px;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-38 {
  -webkit-transition: all 200ms ease-in-out;
  transition: all 200ms ease-in-out;
  vertical-align: middle;
  white-space: nowrap;
  outline: none;
  border: 0;
  background-color: transparent;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  padding: 2px 12px;
  border-radius: 4px;
  color: #fff;
  background-color: #134ae0;
}

.emotion-38:hover {
  color: #fff;
}

.emotion-38:active {
  -webkit-transition: none;
  transition: none;
  color: #fff;
}

.emotion-38:disabled {
  color: #fff;
}

.emotion-38:hover {
  background-color: #175ceb;
}

.emotion-38:active {
  -webkit-transition: none;
  transition: none;
  background-color: #083bc7;
}

.emotion-38:disabled {
  background-color: #99beff;
}

<div
  class="emotion-0 emotion-0"
  data-testid="test-button-group"
>
  <span
    class="emotion-2"
  >
    <button
      class="emotion-3 emotion-3"
    >
      <span
        class="emotion-5"
      >
        Hello
      </span>
    </button>
  </span>
  <span
    class="emotion-6"
  >
    <button
      class="emotion-3 emotion-3"
    >
      <span
        class="emotion-9"
      >
        <svg
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 16 16"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951z"
          />
        </svg>
      </span>
      <span
        class="emotion-5"
      >
        Hello
      </span>
    </button>
  </span>
  <span
    class="emotion-6"
  >
    <button
      class="emotion-3 emotion-3"
    >
      <span
        class="emotion-5"
      >
        Hello
      </span>
    </button>
  </span>
  <span
    class="emotion-6"
  >
    <button
      class="emotion-16 emotion-16"
    >
      <span
        class="emotion-9"
      >
        <svg
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          stroke-width="0"
          viewBox="0 0 16 16"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951z"
          />
        </svg>
      </span>
      <span
        class="emotion-5"
      >
        Hello
      </span>
    </button>
  </span>
  <span
    class="emotion-6"
  >
    <button
      class="emotion-21 emotion-21"
      disabled=""
    >
      <span
        class="emotion-9"
      >
        <svg
          class="emotion-24"
          color="currentColor"
          height="1em"
          viewBox="0 0 12 12"
          width="1em"
        >
          <title>
            LoadingIcon
          </title>
          <path
            d="M5.25.75A.75.75 0 0 1 6 0a6 6 0 1 1-6 6 .75.75 0 0 1 1.5 0A4.5 4.5 0 1 0 6 1.5a.75.75 0 0 1-.75-.75z"
            fill="currentColor"
          />
        </svg>
      </span>
      <span
        class="emotion-5"
      >
        Hello
      </span>
    </button>
  </span>
  <span
    class="emotion-6"
  >
    <button
      class="emotion-21 emotion-21"
      disabled=""
    >
      <span
        class="emotion-9"
      >
        <svg
          class="emotion-24"
          color="currentColor"
          height="1em"
          viewBox="0 0 12 12"
          width="1em"
        >
          <title>
            LoadingIcon
          </title>
          <path
            d="M5.25.75A.75.75 0 0 1 6 0a6 6 0 1 1-6 6 .75.75 0 0 1 1.5 0A4.5 4.5 0 1 0 6 1.5a.75.75 0 0 1-.75-.75z"
            fill="currentColor"
          />
        </svg>
      </span>
      <span
        class="emotion-5"
      >
        Loading
      </span>
    </button>
  </span>
  <span
    class="emotion-6"
  >
    <button
      class="emotion-33 emotion-33"
      disabled=""
    >
      <span
        class="emotion-35"
      >
        <svg
          class="emotion-24"
          color="currentColor"
          height="1em"
          viewBox="0 0 12 12"
          width="1em"
        >
          <title>
            LoadingIcon
          </title>
          <path
            d="M5.25.75A.75.75 0 0 1 6 0a6 6 0 1 1-6 6 .75.75 0 0 1 1.5 0A4.5 4.5 0 1 0 6 1.5a.75.75 0 0 1-.75-.75z"
            fill="currentColor"
          />
        </svg>
      </span>
    </button>
  </span>
  <span
    class="emotion-6"
  >
    <button
      class="emotion-38 emotion-38"
      disabled=""
    >
      <span
        class="emotion-5"
      >
        Text
      </span>
    </button>
  </span>
</div>
`;
